# best_realty_stats_bot

./: .gitignore  README.md  pyproject.toml
common/: __init__.py  config.py.example  db.py  logger.py  migration.py
common/models/: customer_activity.py
services/: __main__.py  best_realty_monitoring_bot.service
services/api_service/: main.http  routes.py  test_main.http
services/bot_service/: bot.py  templates.py
services/bot_service/handlers/: __init__.py  get_current_day_stats.py  get_last_day_stats.py  get_last_three_days_stats.py  get_last_week_stats.py  help.py  keyboards.py  response.py  start.py
services/bot_service/templates/: default_stats.j2  help.j2  start.j2
stats_bot/: __main__.py  config.py.example  db.py  main.py  migration.py  test_main.http
stats_bot/migrations/: 01_activity_by_customers.sql
stats_bot/services/: activity_by_customer.py  logger.py
